--- a/css/index.css
+++ b/css/index.css
@@ -140,3 +140,16 @@ button[disabled=disabled], button:disabled {
 #mensagem-erro{
 	color: red;
 }
+
+.fadeOut{
+	opacity: 0;
+	transition: 0.5s;
+}
+.filter{
+	width: 200px;
+	margin-bottom:10px;
+	padding: 5px;
+}
+.invisivel{
+	display:none;
+}
